--- a/www/styles.css
+++ b/www/styles.css
@@ -10,15 +10,15 @@ body {
 }
 
 .world td {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     position: relative;
 }
 .world .color, .world .value, .world .policy {
     left: 0;
     top: 0;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     position: absolute;
     display: inline-block;
 }
@@ -35,10 +35,14 @@ body {
     display: inline-block;
 }
 
+.world td:hover .value {
+    display: inline-block;
+}
+
 
 .world td {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     background-color: #404040;
     text-align: center;
     overflow: hidden;
@@ -61,23 +65,28 @@ body {
 .world .trap {
     background-color: #582387;
 }
-.world .wall .color, .world .wall .policy,
-.world .goal .color, .world .goal .policy,
-.world .trap .color, .world .trap .policy {
+.world .wall .color,
+.world .goal .color,
+.world .trap .color {
+    display: none !important;
+}
+.world .wall .policy,
+.world .goal .policy {
     display: none !important;
 }
 
 .world .value {
-    font-size: 9px;
-    color: rgba(255, 255, 255, 0.45);
+    font-size: 8px;
+    color: rgba(255, 255, 255, 0.5);
     background-color: rgba(0,0,0,0);
     /*white-space: nowrap;*/
     /*overflow: hidden;*/
     /*text-overflow: ellipsis;*/
 }
 
+
 .world .policy {
-    font-size: 29px;
+    font-size: 15px;
     color: #a7a7a7;
     line-height: 3.2em;
 }
@@ -85,8 +94,8 @@ body {
 .policy {
     left: 0;
     top: 0;
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     position: absolute;
     display: inline-block;
     z-index: 100;
