--- a/www/styles.css
+++ b/www/styles.css
@@ -16,6 +16,10 @@ p {
 button {
     padding: 5px 8px;
 }
+button:disabled {
+    color: #6b6b6b;
+    background-color: #c1c1c1;
+}
 
 .world td {
     width: 50px;
